package pt.ipp.isep.dei.esoft.project.application.controller;

import pt.ipp.isep.dei.esoft.project.ui.console.utils.Utils;

import java.util.ArrayList;
import java.util.List;

public class VFMController {


    /*public List<Vehicle> listVehiclesNeedingCheckUp() {
        List<Vehicle> vehicles = vehicleRepository.getVehicles();
        List<Vehicle> vehiclesNeedingCheckUp = new ArrayList<>();

        for (Vehicle vehicle : vehicles) {
            if (needsCheckup(vehicle)) {
                vehiclesNeedingCheckUp.add(vehicle);
            }
            vehiclesNeedingCheckUp.add(nextCheckupDetails);
        }

        return vehiclesNeedingCheckUp;
    }

    public boolean needsCheckup(Vehicle vehicle) {
        return calculateNextCheckup() > 365;
    }


    public int calculateNextCheckup() {

    } */
}